feat: Create single entrypoint and fix hardcoded paths
- Add main.py as single entrypoint for the D&D 5e MCP Server
- Fix hardcoded paths in persistence/state.py using environment variables
- Update mcp_config_example.json to use relative paths and main.py entrypoint
- Enable portable deployment with configurable data directory via DND_DATA_DIR
- Auto-create save_data directory

Benefits and configure environment properly:
- Single command to start: python main.py
- Portable across different directories and systems
- Configurable paths via environment variables
- Simplified deployment and setup process

--- a/mcp_config_example.json
+++ b/mcp_config_example.json
@@ -3,11 +3,10 @@
         "solo-dnd": {
             "command": "python3",
             "args": [
-                "-m",
-                "dnd_mcp_server.server"
+                "main.py"
             ],
             "env": {
-                "PYTHONPATH": "/Users/gwyn/projects/5e-mcp/gemini"
+                "DND_DATA_DIR": "./save_data"
             },
             "disabled": false,
             "autoApprove": [
